# cargo-update-git-rev

./: Cargo.toml
src/: main.rs
