[package]
name = "cargo-update-git-rev"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.11.0"
tempfile = "3.1.0"
toml_edit = "0.1.5"
structopt = "0.3.5"
anyhow = "1.0.25"
